Like, Dislike button implemented
Now the user can like, dislike any movie. Todo: Play with Like, Dislike
buttons. Don't let a user to Like and Dislike the same movie. Because it
is not logical :)

--- a/Views/Home/_Home.cshtml
+++ b/Views/Home/_Home.cshtml
@@ -27,9 +27,12 @@
                     <td data-bind="text: like"></td>
                     <td data-bind="text: dislike"></td>
                     <td><input data-bind="value: title" /></td>
+                    <td><button class="btn btn-success" data-bind="click: $parent.likeMovie">Like</button></td>
+                    <td><button class="btn btn-danger" data-bind="click: $parent.dislikeMovie">Dislike</button></td>
                 </tr>
             </tbody>
         </table>
+
     </div>
 
         <div class="col-md-4">
